# rezzy

./: .env.example  .gitignore  Dockerfile  pyproject.toml  test.db
alembic/: env.py
alembic/versions/: 2449b92ebf6d_allow_null_times_in_operating_hours.py  2e842156351d_initial_schema.py  7a1c2d9e4f03_add_weather_location_to_config.py  9c7b6f2a1d4e_add_account_approval_and_reservation_creator.py  b873c42ebe4b_replace_merge_groups_with_reservation_.py  d7a893975d1f_add_users_table.py
frontend/: package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.ts  client.ts  config.ts  events.ts  hours.ts  reservations.ts  tables.ts
frontend/src/components/layout/: AppLayout.tsx  Sidebar.tsx
frontend/src/components/setup/: SetupHours.tsx  (+3 more)
frontend/src/context/: AuthContext.tsx  AuthContextState.ts  useAuth.ts
frontend/src/hooks/: useSetupStatus.ts
frontend/src/lib/: utils.ts
frontend/src/pages/: AdminUsersPage.tsx  HoursPage.tsx  LoginPage.tsx  ReservationsPage.tsx  SettingsPage.tsx  SpecialHoursPage.tsx  TablesPage.tsx
frontend/src/types/: index.ts
rezzy/: cli.py  main.py
rezzy/api/: __init__.py  auth.py  config.py  events.py  hours.py  reservations.py  tables.py
rezzy/core/: config.py  database.py  security.py
rezzy/models/: __init__.py  restaurant.py  user.py
rezzy/schemas/: __init__.py  restaurant.py
rezzy/services/: __init__.py  events_service.py  hours_service.py  reservation_service.py  restaurant_service.py
tests/: conftest.py  test_auth.py  test_config.py  test_events.py  test_hours.py  test_reservations.py  test_tables.py
(+8 files in other folders)
